Spectrum: FFT frequency error correction, SID-3:under debug of Polarization

--- a/JUICE-CDF-HF-SID21_sample.ipynb
+++ b/JUICE-CDF-HF-SID21_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2024/9/18"
+    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2024/10/10"
    ]
   },
   {
@@ -241,8 +241,8 @@
    "outputs": [],
    "source": [
     "spec = juice_cal.spec_cal(data, 21, unit_mode, band_mode, T_HF, T_RWI)  # CAL\n",
-    "spec = juice_spec.hf_getspec_angle(spec)                                # Coherency & ange\n",
-    "spec = juice_spec.hf_getspec_stokes(spec)                               # Stokes and Polarization Parameters "
+    "spec = juice_spec.hf_getspec_angle(spec, 21)                                # Coherency & ange\n",
+    "spec = juice_spec.hf_getspec_stokes(spec, 21)                               # Stokes and Polarization Parameters "
    ]
   },
   {
@@ -814,7 +814,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "3.10",
    "language": "python",
    "name": "python3"
   },
