--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -127,14 +127,15 @@
    "outputs": [],
    "source": [
     "# date='20230419'\n",
-    "date='20230530'   # CAL\n",
+    "# date='20230530'   # CAL\n",
     "# date='20230601'\n",
     "# date='20230712'\n",
     "# date='20230713'\n",
     "# date='20240125'\n",
-    "# date='20240822'   # CAL\n",
+    "date='20240822'   # CAL\n",
     "# date='0'\n",
-    "data_dir, data_name_list = juice_data.hf_sid2_datalist(date)       # [date]   yyyymmdd: group read    others: file list"
+    "ver = 'V02'\n",
+    "data_dir, data_name_list = juice_data.hf_sid2_datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
@@ -184,18 +185,36 @@
     "f_min1  = data.frequency[0][0][0]; f_max1  = max(np.ravel(data.frequency))\n",
     "N_ch0   = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
     "\n",
+    "n0 = 1\n",
     "print(\"       date and time:\", str_date)\n",
     "print(\"           data size:\", data.Eu_i.shape, \"  [ Num-samples:\", n_time0, \"  Num-Frequency:\", n_freq0, \"  Length:\", n_samp0, \"]\")\n",
     "print(\"         Time-length:\", data.time[0][0][n_samp0-1], \"sec in 1-sweep\")\n",
     "print(\"f, width, step (kHz):\", f_min1,  \"-\", f_max1, data.freq_width[0][0][0], data.freq_step[0][0][0])\n",
-    "print(\"                      [BAND0] \", 'start {:4d} '.format(data.B0_startf[0]), 'stop {:5d} '.format(data.B0_stopf[0]), 'step {:3d} '.format(data.B0_step[0]), 'repeat {:2d} '.format(data.B0_repeat[0]),  'subdiv {:2d}'.format(data.B0_subdiv[0]), ) \n",
-    "print(\"                      [BAND1] \", 'start {:4d} '.format(data.B1_startf[0]), 'stop {:5d} '.format(data.B1_stopf[0]), 'step {:3d} '.format(data.B1_step[0]), 'repeat {:2d} '.format(data.B1_repeat[0]),  'subdiv {:2d}'.format(data.B1_subdiv[0]), ) \n",
-    "print(\"                      [BAND2] \", 'start {:4d} '.format(data.B2_startf[0]), 'stop {:5d} '.format(data.B2_stopf[0]), 'step {:3d} '.format(data.B2_step[0]), 'repeat {:2d} '.format(data.B2_repeat[0]),  'subdiv {:2d}'.format(data.B2_subdiv[0]), ) \n",
-    "print(\"                      [BAND3] \", 'start {:4d} '.format(data.B3_startf[0]), 'stop {:5d} '.format(data.B3_stopf[0]), 'step {:3d} '.format(data.B3_step[0]), 'repeat {:2d} '.format(data.B3_repeat[0]),  'subdiv {:2d}'.format(data.B3_subdiv[0]), ) \n",
-    "print(\"                      [BAND4] \", 'start {:4d} '.format(data.B4_startf[0]), 'stop {:5d} '.format(data.B4_stopf[0]), 'step {:3d} '.format(data.B4_step[0]), 'repeat {:2d} '.format(data.B4_repeat[0]),  'subdiv {:2d}'.format(data.B4_subdiv[0]), ) \n",
+    "print(\"                      [BAND0] \", 'start {:4d} '.format(data.B0_startf[n0]), 'stop {:5d} '.format(data.B0_stopf[n0]), 'step {:3d} '.format(data.B0_step[n0]), 'repeat {:2d} '.format(data.B0_repeat[n0]),  'subdiv {:2d}'.format(data.B0_subdiv[n0]), ) \n",
+    "print(\"                      [BAND1] \", 'start {:4d} '.format(data.B1_startf[n0]), 'stop {:5d} '.format(data.B1_stopf[n0]), 'step {:3d} '.format(data.B1_step[n0]), 'repeat {:2d} '.format(data.B1_repeat[n0]),  'subdiv {:2d}'.format(data.B1_subdiv[n0]), ) \n",
+    "print(\"                      [BAND2] \", 'start {:4d} '.format(data.B2_startf[n0]), 'stop {:5d} '.format(data.B2_stopf[n0]), 'step {:3d} '.format(data.B2_step[n0]), 'repeat {:2d} '.format(data.B2_repeat[n0]),  'subdiv {:2d}'.format(data.B2_subdiv[n0]), ) \n",
+    "print(\"                      [BAND3] \", 'start {:4d} '.format(data.B3_startf[n0]), 'stop {:5d} '.format(data.B3_stopf[n0]), 'step {:3d} '.format(data.B3_step[n0]), 'repeat {:2d} '.format(data.B3_repeat[n0]),  'subdiv {:2d}'.format(data.B3_subdiv[n0]), ) \n",
+    "print(\"                      [BAND4] \", 'start {:4d} '.format(data.B4_startf[n0]), 'stop {:5d} '.format(data.B4_stopf[n0]), 'step {:3d} '.format(data.B4_step[n0]), 'repeat {:2d} '.format(data.B4_repeat[n0]),  'subdiv {:2d}'.format(data.B4_subdiv[n0]), ) \n",
     "\n",
     "#\n",
     "print(\"                  Ch:\", N_ch0, \"  [U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \"]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "639cdaae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "import csv\n",
+    "with open(\"sid2-f-org.csv\", 'w') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    for i in range(n_freq0):\n",
+    "        writer.writerow([ i, data.frequency[1][i][0], data.freq_width[1][i][0], data.freq_step[1][i][0]])\n",
+    "print(n_freq0, data.frequency.shape)\n",
+    "\"\"\""
    ]
   },
   {
@@ -418,8 +437,25 @@
     "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
     "            juice_sid2.hf_sid2_spec_nan(data, i);   juice_sid2.hf_sid2_spec_nan(data, i+1)\n",
     "\n",
-    "spec = juice_spec.hf_getspec_angle (spec)                               # Coherency & ange\n",
-    "spec = juice_spec.hf_getspec_stokes(spec)                               # Stokes and Polarization Parameters"
+    "spec = juice_spec.hf_getspec_angle (spec, 2)                               # Coherency & ange\n",
+    "spec = juice_spec.hf_getspec_stokes(spec, 2)                               # Stokes and Polarization Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51392467",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "import csv\n",
+    "with open(\"sid2-f.csv\", 'w') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    for i in range(n_freq1):\n",
+    "        writer.writerow([ i, freq_1d[i], freq_w_1d[i]])\n",
+    "print(n_freq1, spec.freq.shape)\n",
+    "\"\"\""
    ]
   },
   {
@@ -898,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "8c6aa899",
    "metadata": {},
    "outputs": [],
@@ -1158,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "5edc2854",
    "metadata": {},
    "outputs": [],
@@ -1178,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "57ad12eb",
    "metadata": {},
    "outputs": [],
@@ -1677,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "d1145016",
    "metadata": {},
    "outputs": [],
@@ -1809,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "3bca480c",
    "metadata": {},
    "outputs": [],
@@ -1946,7 +1982,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "3.10",
    "language": "python",
    "name": "python3"
   },
