--- a/JUICE-CDF-HF-SID2_sp_cal.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_cal.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/9/22"
+    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/10/3"
    ]
   },
   {
@@ -145,7 +145,8 @@
     "# date='20240125'\n",
     "date='20240822'   # CAL\n",
     "# date='0'\n",
-    "data_dir, data_name_list = juice_data.hf_sid2_datalist(date)       # [date]   yyyymmdd: group read    others: file list"
+    "ver = 'V02'\n",
+    "data_dir, data_name_list = juice_data.hf_sid2_datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
