--- a/JUICE-CDF-HF-SID4-20_sample.ipynb
+++ b/JUICE-CDF-HF-SID4-20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2024/9/19"
+    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2024/10/10"
    ]
   },
   {
@@ -354,8 +354,8 @@
    "source": [
     "spec = copy.deepcopy(data)\n",
     "spec = juice_cal.spec_cal(spec, sid, unit_mode, band_mode, T_HF, T_RWI) # CAL\n",
-    "spec = juice_spec.hf_getspec_angle    (spec)                            # Coherency & ange\n",
-    "spec = juice_spec.hf_getspec_stokes   (spec)                            # Stokes and Polarization Parameters \n",
+    "spec = juice_spec.hf_getspec_angle    (spec, sid)                            # Coherency & ange\n",
+    "spec = juice_spec.hf_getspec_stokes   (spec, sid)                            # Stokes and Polarization Parameters \n",
     "spec = juice_spec.hf_getspec_stokes_3d(spec)                            # 3D Stokes and Polarization Parameters"
    ]
   },
@@ -1305,7 +1305,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "3.10",
    "language": "python",
    "name": "python3"
   },
