--- a/JUICE-CDF-HF-SID2_sp_mask.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_mask.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/9/22"
+    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/10/3"
    ]
   },
   {
@@ -148,7 +148,8 @@
     "# date='20240125'\n",
     "# date='20240822'   # CAL\n",
     "# date='0'\n",
-    "data_dir, data_name_list = juice_data.hf_sid2_datalist(date)       # [date]   yyyymmdd: group read    others: file list"
+    "ver = 'V02'\n",
+    "data_dir, data_name_list = juice_data.hf_sid2_datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
@@ -1149,7 +1150,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "3.10",
    "language": "python",
    "name": "python3"
   },
