--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -575,7 +575,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "3.10",
    "language": "python",
    "name": "python3"
   },
