--- a/JUICE-Orbit.ipynb
+++ b/JUICE-Orbit.ipynb
@@ -561,7 +561,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "3.10",
    "language": "python",
    "name": "python3"
   },
